laborations/lab2/testsuite/good/void_call_return_empty.cc
void empty() {}

int main() {
  empty();
  return 0;
}
