laborations/lab2/testsuite/bad/arith_return_bool_min_int.cc
int main () {
	return true - 0;
}
